Refine some codes